--- a/.github/workflows/cli_ut.yml
+++ b/.github/workflows/cli_ut.yml
@@ -8,15 +8,15 @@ on:
 
 jobs:
 
-  build:
-    name: Build
+  unit_test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
       with:
-        go-version: ^1.13
+        go-version: 1.13
       id: go
 
     - name: Check out code into the Go module directory
@@ -30,8 +30,18 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
-      run: go build -v .
-
     - name: Test
-      run: go test -v .
+      run: go test -v ./cmd/...
+      
+    - name: Slack Notification
+      # 前Stepの実行結果を判定
+      # success() or failure() or always()
+      if: failure()
+      uses: rtCamp/action-slack-notify@master
+      env:
+        SLACK_CHANNEL: github-actions-result
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: ':fire::fire::fire:${{github.head_ref}}: ${{ job.status }}:fire::fire::fire:'
+        SLACK_TITLE: Action Result （${{github.repository}}）
+        SLACK_USERNAME: rtBot
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
